Style: edit btn band align correctly

--- a/public/stylesheets/band.css
+++ b/public/stylesheets/band.css
@@ -77,7 +77,7 @@
     background-color: var(--secondary-bg-color);
 }
 
-#band-item4 {
+#band-item4 > a {
     display: block;
     text-align: center;
     width: 100%;
